--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,8 @@ header{
 	display: none;
 }
 
+
+
 .mobile-menu{
 	transition: .6s;
 	cursor: pointer;
@@ -414,6 +416,15 @@ header div#slide figure {
 	left: -100% !important;
 }
 
+.line{
+	width: 1px;
+height: 100px;
+border-left: none;
+border-top: none;
+border-bottom: none;
+background-color: #000;
+}
+
 .bullets{
 	height: 12px;
 	width: 100px;
@@ -710,10 +721,6 @@ display: block;
 }
 
 .workIntro,.work-info{
-	border: 1px solid #f0f0f0;
-	border-top: 0;
-	border-right: 0;
-	border-left: 0;
 	padding-bottom: 10px;
 	width: 80%;
 	margin-left: auto;
@@ -804,6 +811,12 @@ height: 25px;
 .border{
 	border: none;
 }
+
+.tweets{
+	width: 60%;
+	margin: 0 auto;
+}
+
 .tweets-header{
 	width: 70%;
 	margin: 10px auto 0 auto;
@@ -897,6 +910,8 @@ form input{
 	border-top: none;*/
 }
  
+
+
 .skills li{
 	margin-right: 15px;
 	margin-bottom: 10px;
@@ -909,6 +924,7 @@ form input{
 	padding: 5px;
 	color: white;
 	background-color: #474747;
+	font-size: 13px;
 }
 
 .required-bullet1,.required-bullet2,.required-bullet3{
@@ -1217,8 +1233,12 @@ margin: 0 auto 20px;
 		margin-top: 30px;
 	}
 
-	
-
+	.desktop-nav li {
+	font-size: 17px !important;
+	font-weight: bold !important;
+	color: #474747;
+	border: 2px solid cadetblue;
+}
 	 
 }
 
