adding ajax for contact form

--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@ header{
 .sidenav hr{
 	width: 50px;
 	height: 2px;
-	background-color: #3F729B;
+	background-color: #59698d;
 	margin-top: 0;
 	border: none;
 	position: absolute;
@@ -715,7 +715,7 @@ display: block;
 	margin-right: auto;
 	font-size: 2.5em;
 	font-weight: lighter;
-	color: #3F729B;
+	color: #59698d;
 
 }
 
@@ -770,7 +770,7 @@ height: 25px;
 }
 
 .h3-border{
-	border: 2px solid #3F729B;
+	border: 2px solid #59698d;
 	width: 150px;
 	top: -15px;
 	position: relative;
@@ -782,7 +782,7 @@ height: 25px;
 }
 
 .h3-border1{
-	border: 1px solid #3F729B;
+	border: 1px solid #59698d;
 	width: 100%;
 	position: relative;
     bottom: 18px;
@@ -827,7 +827,7 @@ height: 25px;
 
 .portfolio h2{
 	font-weight: normal;
-	color: #3F729B;
+	color: #59698d;
 }
 
 .border{
@@ -918,7 +918,7 @@ form input{
 	margin-bottom: 10px;
 	margin-top: 20px;
 	font-weight: normal;
-	color: #3F729B;
+	color: #59698d;
 
 }
 
@@ -1094,7 +1094,7 @@ padding: 5px;
 		cursor: pointer;
 	}
 
-.desktop-nav li:hover{border: 3px solid #3F729B;border-top: 0;
+.desktop-nav li:hover{border: 3px solid #59698d;border-top: 0;
 border-right: 0;
 border-left: 0;
 }
@@ -1249,7 +1249,7 @@ margin-left: auto;
 margin-right: auto;
 margin: 0 auto 20px;
 	font-weight: lighter;
-	color: #3F729B;
+	color: #59698d;
 	}
 
 	.contact-svg{
