--- a/css/main.css
+++ b/css/main.css
@@ -515,9 +515,13 @@ left: 50%;
 	z-index: 1;
 }
 
-.next{
+/*.next{
 	left: 40px;
 	bottom: 84px;
+}*/
+
+.next{
+	left: -11px;
 }
 
 
@@ -605,12 +609,16 @@ left: 50%;
 	position: absolute;
 	width: 100%;
 	height: 400px;
-	background-color: rgba(0, 0, 0, 0.4) ;
+	background-color: rgba(0, 0, 0, 0.7) ;
 	z-index: 1;
 }
 
 .img-info-container{
 	color: #474747;
+}
+
+.img-info{
+	color: gray !important;
 }
 
 .img-info-container p {
@@ -641,16 +649,18 @@ opacity: 0;
 
   .button a{
 
-padding-top: 6px;
+padding-top: 7px;
 padding-left: 5px;
 display: block;
 }
 
-
+.button:hover{
+	width: 150px;
+}
    
 .button{
 	height: 35px;
-	width: 150px;
+	width: 120px;
 	border-radius: 100px;
     outline: none;
     background-color: white;
@@ -658,6 +668,7 @@ display: block;
     cursor: pointer;
     margin: 10px auto 0 auto;
 	display: block;
+	transition: .2s;
 }
 
 .img-info-container div {
@@ -665,18 +676,20 @@ display: block;
 	margin: 0 auto;
 	position: relative;
 	top: 150px;
+	font-size: 22px;
 }
 
 
 
 
 .img-info-container h1{
-	width: 200px;
+	width: 370px;
 	position: relative;
 	left: 0px;
 	transition: 3s;
 	opacity: 0;
 	color: white;
+
 }
 
 .position-h1{
@@ -722,7 +735,7 @@ display: block;
 	margin-right: auto;
 	font-size: 2.5em;
 	font-weight: lighter;
-	color: #59698d;
+	color: #45526e;
 
 }
 
@@ -762,7 +775,7 @@ line-height: 1.5;
 }
 
 .work img{
-	width: 80%;
+	width: 90%;
 }
 
 
@@ -835,7 +848,11 @@ height: 25px;
 
 .portfolio h2{
 	font-weight: normal;
-	color: #59698d;
+	color: #45526e;
+}
+
+.project-btn a {
+	padding-right: 5px;
 }
 
 .border{
@@ -874,7 +891,7 @@ textarea{
 }
 
 form{
-	width: 80%;
+	width: 95%;
 	margin: 0 auto;
 }
 form input::placeholder{font-size: 13px; }
@@ -926,7 +943,7 @@ form input{
 	margin-bottom: 10px;
 	margin-top: 20px;
 	font-weight: normal;
-	color: #59698d;
+	color: #45526e !important;
 
 }
 
@@ -1120,9 +1137,7 @@ padding: 5px;
 		cursor: pointer;
 	}
 
-.desktop-nav li:hover{border: 3px solid #59698d;border-top: 0;
-border-right: 0;
-border-left: 0;
+.desktop-nav li:hover{color: #45526e !important;
 }
 /*	.fix-desktop-nav{
 		position: fixed !important;
